Revert "Updated CORS Config."
This reverts commit 283b3790413ac525c531fc2e7edba899648a01d7.