@@ -13,7 +13,6 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import java.util.Arrays;
-import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -61,9 +60,12 @@ public class SecurityConfig {
         CorsConfiguration configuration = new CorsConfiguration();
 
         // Allow specific origins (don't use * with credentials)
-        configuration.setAllowedOrigins(Arrays.asList(
-                "http://localhost:3000",  // Local development
-                "https://d2idups4eyhbd8.cloudfront.net"  //CloudFront frontend
+        configuration.setAllowedOriginPatterns(Arrays.asList(
+                "http://localhost:*",
+                "http://127.0.0.1:*",
+                "http://192.168.*.*:*",
+                "https://d2idups4eyhbd8.cloudfront.net",   //CloudFront frontend
+                "https://*.trycloudflare.com" //Cloudflare url of backend
         ));
 
         // Allow common HTTP methods
@@ -72,7 +74,7 @@ public class SecurityConfig {
         ));
 
         // Allow all headers
-        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setAllowedHeaders(Arrays.asList("*"));
 
         // Expose headers
         configuration.setExposedHeaders(Arrays.asList("Authorization", "Content-Type"));
